2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Added protection
	against database collection changes while iterating to update
	references.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs: Improve warning
	message.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: If
	there isn't a common assembly name for all configurations, make sure
	the common name property is removed. Fixes bug Bug 433511 - project
	configurations are not preserved.

2008-10-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomReturnType.cs: Worked on instantiated
	types.

2008-10-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/InstantiatedType.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/ClassEntry.cs:
	* MonoDevelop.Projects.Dom.Serialization/NamespaceEntry.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	Fixed the lookup of generic classes in the custom code completion
	database.

2008-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/InstantiatedType.cs: changed header.

2008-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/InstantiatedType.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Changed type
	instantiation.

2008-10-16  Andreia Gaita  <avidigal@novell.com>

	* MonoDevelop.Projects.Formats.MD1/CmbxFileFormat.cs: If the solution
	doesn't have a Configuration that matches the project's, add it.
	Fixes #435901

2008-10-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: Add assembly key file to
	referenced files list.

2008-10-20  Michael Hutchinson  <mhutchinson@novell.com>
